<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="24dp" app:cardCornerRadius="12dp" app:cardElevation="8dp" app:cardUseCompatPadding="true">
    <LinearLayout android:orientation="vertical" android:paddingVertical="24dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/update_title" android:text="@string/update_modal_header" android:layout_gravity="center" android:layout_marginTop="8dp" android:textColor="#FFFFFF" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <TextView android:id="@+id/update_message" android:text="@string/update_modal_subtitle" android:layout_gravity="center" android:layout_marginTop="8dp" android:textColor="#FFFFFF" android:layout_width="wrap_content" android:layout_height="wrap_content"/>

        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_gravity="center_horizontal" android:gravity="center_horizontal">
            <Button
                    android:id="@+id/download_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_modal_download"
                    android:textColor="#FFFFFF"
                    app:iconPadding="8dp"/>

            <Space android:layout_width="16dp" android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/later_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialogue_update_later"
                    android:textColor="#FFFFFF"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
